ajout du debut de la modal, ajout du css de la modal

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -51,6 +51,16 @@
 			</section>
 			<section id="portfolio">
 				<h2>Mes Projets</h2>
+				<div id="modal" class="modal">
+					<div id="contain-modal" class="contain-modal">
+						<h2>Galerie photo</h2>
+						<span class="close">&times;</span>
+						<div class="gestion-galery" id="gestion-galery">
+						</div>
+						<input type="button" value="Ajouter une photo">
+						<a>Supprimer la galerie</a>
+					</div>
+				</div>
 				<div id="filter"></div>
 				<div class="gallery" id="gallery"></div>
 			</section>
