ajout de la modale pour envoyer un projet

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -75,6 +75,7 @@
 		</main>
 		<div id="modal" class="modal">
 			<div id="contain-modal" class="contain-modal"></div>
+			<div class="addPicture" id="addPicture"></div>
 		</div>
 		<footer>
 			<nav>
