--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,6 +10,7 @@
 			href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
 			rel="stylesheet"
 		/>
+		
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -55,7 +56,9 @@
 				</article>
 			</section>
 			<section id="portfolio">
-				<h2>Mes Projets</h2>
+				<div class="divTitle">
+					<h2>Mes Projets</h2>
+				</div>
 				<div id="filter"></div>
 				<div class="gallery" id="gallery"></div>
 			</section>
